@@ -1,5 +1,15 @@
 2009-10-06  Ivan Maidanski <ivmai@mail.ru>
 
+	* include/gc_config_macros.h: Rearrange the platform detection
+	code (GC_WIN32_PTHREADS implies GC_WIN32_THREADS; define
+	GC_THREADS first if GC_XXX_THREADS already set; define proper
+	GC_XXX_THREADS if GC_THREADS; define GC_PTHREADS in a single
+	place; define _REENTRANT if posix threads except for Win32).
+	* include/gc_config_macros.h: Reformat the code (make the
+	indentation style uniform across the file).
+
+2009-10-06  Ivan Maidanski <ivmai@mail.ru>
+
 	* alloc.c (GC_try_to_collect_general): New function (move the code
 	from GC_try_to_collect, pass force_unmap argument).
 	* alloc.c (GC_try_to_collect, GC_gcollect): Call
